manual app key + nama

--- a/Jobsheet/Jobsheet01/coba01/.env.example
+++ b/Jobsheet/Jobsheet01/coba01/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Cdd0m0qDiIXquu7Qx9EQKFYP8SBS3EHSoOkIGhK7i54=
 APP_DEBUG=true
 APP_URL=http://localhost
 
